Cleaned Up Youtube Project

--- a/Youtube - Influencers Part 3.ipynb
+++ b/Youtube - Influencers Part 3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notes on how to use YouTube's API\n",
+    "# Predict Success of Youtube Influencers\n",
     "#### Date: 2017-10-15\n",
     "#### User: Julianne"
    ]
