--- a/Project - Part 1 - Data Extraction.ipynb
+++ b/Project - Part 1 - Data Extraction.ipynb
@@ -362,14 +362,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "#youtube API key\n",
-    "api_key = \"AIzaSyAKuyO0o3iU7aga6xlge-WRtesFMAksl6I\""
+    "api_key = 'placeholder'"
    ]
   },
   {
